--- a/contact.html
+++ b/contact.html
@@ -45,6 +45,11 @@
                 </div>
             </nav>
     </header>
+    <footer>
+            <div class="container">
+              Copyright &copy; 
+            </div>
+          </footer>
 </body>
 
 </html>
