--- a/contact.html
+++ b/contact.html
@@ -16,40 +16,43 @@
 
 <body>
     <header class="contactHeader">
-        <h1>Contact</h1>
+    
+        <h1><strong>Contact</strong></h1>
+        
     </header>
 
 
-    <header id="main-header">
-        <div class="container">
-            <nav id="nav" class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-                <a class="navbar-brand" href="https://www.linkedin.com/">Sy's Portfolio Page</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="index.html">About Sy<span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="portfolio.html">Experience</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Bio</a>
-                        </li>
+    <nav class="navbar sticky-top navbar-light bg-light">
+            <a class="navbar-brand" href="http://google.com">contact</a>
+          </nav>
 
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-    </header>
-    <footer>
-            <div class="container">
-              Copyright &copy; 
-            </div>
-          </footer>
+
+<div>
+
+    <div class="container">
+
+        <div class="row">
+
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro et nemo vitae, eius, quam dolor id in sit
+                impedit
+                magnam animi illo necessitatibus blanditiis provident nesciunt enim aut voluptatibus eum.
+            </p>
+        </div>
+
+        <div class="row">
+
+        </div>
+    </div>
+</div>
+
+    <footer id="footer">
+        <h1>
+            <strong>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam consequuntur quod incidunt consequatur ipsam debitis
+                minima nostrum explicabo, quasi alias neque sunt distinctio modi eos reprehenderit vero possimus dolorum natus!
+            </strong>
+        </h1>
+    </footer>
 </body>
 
 </html>
